--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,381 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-size: 100%;
+  font-family: 'Lato', sans-serif;
+  background-color: #ec4c8a;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: rgb(25, 25, 58);
+}
+
+::-webkit-scrollbar {
+  width: 0.7rem;
+  background-color: rgba(255, 255, 255, 0.123);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 1rem;
+  height: 1rem;
+  background-color: rgb(172, 172, 172);
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+.flex {
+  display: flex;
+}
+
+.limit {
+  padding-inline: 1rem;
+}
+
+/* App styling */
+
 .App {
+  width: 100%;
+  overflow-x: hidden;
+  background-color: #ec4c8a;
+  color: #fff;
+  min-height: 100vh;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #4369b2;
+  color: rgb(255, 255, 255);
+  padding: 0.7rem 1rem;
+  font-size: 1.1rem;
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+}
+
+.more-header-text {
+  font-size: 0.5rem;
+}
+
+.header-text {
+  font-weight: 600;
+  font-size: 0.7rem;
+}
+
+.header-text:hover {
+  color: rgb(25, 25, 58);
+}
+
+.logo {
+  justify-content: center;
+  align-items: center;
+  gap: 0.15rem;
+}
+
+.logo img {
+  height: 1.2rem;
+  width: auto;
+}
+
+.header-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header svg {
+  font-size: 1.3rem;
+}
+
+.header svg:hover {
+  scale: 1.1;
+  cursor: pointer;
+}
+
+.loader {
+  margin-top: 7rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 20rem;
+}
+
+.search-input {
+  display: block;
+  width: 80%;
+  padding: 0.8rem 1.2rem;
+  background-color: rgb(255, 255, 255);
+  border: none;
+
+  /* border-radius: 2rem; */
+  margin-bottom: 2rem;
+  margin-inline: auto;
+  color: #000;
+  outline: #fff !important;
+}
+
+.error-message {
+  margin-top: 8rem;
+  font-size: 1.49rem;
+}
+
+.games-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.cards {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card {
+  background: #32383e;
+  width: 24em;
+  border-radius: 0.2em;
+  margin: 1em;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+  transition: all ease 200ms;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
+}
+
+.card img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.card h2 {
+  color: #fff;
+  margin-top: -0.2em;
+  line-height: 1.4;
+  font-size: 1.3em;
+  font-weight: 500;
+  font-family: 'Montserrat', sans-serif;
+  transition: all ease-in 100ms;
+}
+
+.card p {
+  color: #7ad4e4;
+}
+
+.card h5 {
+  color: #ffee04;
+  font-weight: 700;
+  font-size: 0.6em;
+  letter-spacing: 0.1em;
+  margin: 1.4em 0 0 0;
+  text-transform: uppercase;
+  border-radius: 0.3rem;
+}
+
+.card-body {
+  padding: 1.2em;
+}
+
+.game-descriptions {
+  margin: 2% 0 6%;
+}
+
+.game-genre {
+  background-color: #717679;
+  padding: 1% 2.5%;
+  width: fit-content;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-game {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1.5rem;
+}
+
+.details-header {
+  font-size: 3rem;
+  color: rgb(12, 24, 54);
+  letter-spacing: 0.2rem;
+}
+
+.details-image {
+  width: 70% !important;
+  height: max-content;
+}
+
+.screenshots {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.screenshots-image {
+  width: 70%;
+  margin-bottom: 3%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.details-description {
+  color: rgb(7, 11, 40);
+  text-align: center;
+  width: 70%;
+}
+
+.details-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.details-list-item {
+  margin-bottom: 3%;
+  list-style-type: none;
+  letter-spacing: 0.05rem;
+  text-align: center;
+}
+
+.details-list-item > h3 {
+  color: rgb(233, 243, 133);
+}
+
+.details-container > ul > li:nth-child(6) > h2 {
+  font-size: 1.15rem;
+}
+
+.aboutme-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.my-foto {
+  width: 20%;
+}
+
+.aboutme-text {
+  padding: 0 20%;
+  text-align: center;
+}
+
+.references-list > li {
+  padding: 1% 0;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding-inline: 4rem;
+    font-size: 1.4rem;
   }
 
-  to {
-    transform: rotate(360deg);
+  header svg {
+    font-size: 1.8rem;
+  }
+
+  .more-header-text {
+    font-size: 1rem;
+  }
+
+  .header-text {
+    font-size: 1.2rem;
+  }
+
+  .loader {
+    margin-top: 10rem;
+  }
+
+  .search-input {
+    padding-block: 1rem;
+    width: 35rem;
+  }
+
+  .search-input::placeholder {
+    font-size: 1rem;
+  }
+
+  .card-container {
+    width: 23rem;
+  }
+
+  .games-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .details-image {
+    width: 32% !important;
+    height: max-content;
+  }
+
+  .screenshots {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .screenshots-image {
+    width: 32%;
+  }
+
+  .details-description {
+    width: 100%;
+  }
+
+  .details-container {
+    padding-inline: 4%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .details-list-item {
+    margin-bottom: 3%;
+    list-style-type: none;
+    letter-spacing: 0.05rem;
+    text-align: center;
+  }
+
+  .details-container > ul > li:nth-child(6) > h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  .limit {
+    padding-inline: 30rem;
+  }
+
+  .header {
+    justify-content: space-around;
   }
 }
